worker-macros/tests/ui/start-is-async.stderr
error: custom attribute panicked
 --> tests/ui/start-is-async.rs:3:1
  |
3 | #[event(start)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: the `start` handler must not be an async function
