worker-macros/tests/ui/start-is-async.rs
use worker_macros::event;

#[event(start)]
async fn start() {}

fn main() {}
